// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/Textarea Auto Rows 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-bPyhqo dWxQcS"
  >
    <textarea
      class="StyledTextArea-sc-17i3mwp-0 ffIuvj sc-olbas hajENe sc-hiMGwR dZpBIm"
    />
  </div>
</div>
`;

exports[`Storyshots Core/Textarea Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-bPyhqo dWxQcS"
  >
    <textarea
      class="StyledTextArea-sc-17i3mwp-0 ffIuvj sc-olbas hajENe sc-hiMGwR dZpBIm"
    />
  </div>
</div>
`;

exports[`Storyshots Core/Textarea Disabled 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-bPyhqo dWxQcS"
  >
    <textarea
      class="StyledTextArea-sc-17i3mwp-0 ePDaUN sc-olbas jyLhGp sc-hiMGwR dZpBIm"
      disabled=""
    />
  </div>
</div>
`;

exports[`Storyshots Core/Textarea Min Max Rows 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-bPyhqo dWxQcS"
  >
    <textarea
      class="StyledTextArea-sc-17i3mwp-0 ffIuvj sc-olbas hajENe sc-hiMGwR dZpBIm"
      rows="4"
    />
  </div>
</div>
`;

exports[`Storyshots Core/Textarea Monospace 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-bPyhqo dWxQcS"
  >
    <textarea
      class="StyledTextArea-sc-17i3mwp-0 ffIuvj sc-olbas weSOz sc-hiMGwR dZpBIm"
      placeholder="Type something..."
    />
  </div>
</div>
`;

exports[`Storyshots Core/Textarea Read Only 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-bPyhqo dWxQcS"
  >
    <textarea
      class="StyledTextArea-sc-17i3mwp-0 ffIuvj sc-olbas hajENe sc-hiMGwR dZpBIm"
      readonly=""
    />
  </div>
</div>
`;

exports[`Storyshots Core/Textarea With Placeholder 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jbmlFX sc-bPyhqo dWxQcS"
  >
    <textarea
      class="StyledTextArea-sc-17i3mwp-0 ffIuvj sc-olbas hajENe sc-hiMGwR dZpBIm"
      placeholder="Type something..."
    />
  </div>
</div>
`;
